--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   },
   "devDependencies": {
     "@wdio/allure-reporter": "^7.26.0",
+    "@wdio/browserstack-service": "^7.26.0",
     "@wdio/cucumber-framework": "^7.26.0",
+    "@wdio/firefox-profile-service": "^7.26.0",
     "@wdio/local-runner": "^7.26.0",
+    "@wdio/selenium-standalone-service": "^7.26.0",
     "chromedriver": "^108.0.0",
-    "wdio-chromedriver-service": "^8.0.0",
+    "wdio-chromedriver-service": "^8.0.1",
     "wdio-wait-for": "^3.0.1"
   }
 }
